--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,9 @@ label
 {
   display: contents;
 }
+.hide {
+  display: none;
+}
 
 .auth-wrapper {
   display: flex;
@@ -32,45 +35,26 @@ label
   flex-direction: column;
   text-align: left;
   padding-bottom: 20px;
-  padding-top: 20px;
+  padding-top: 80px;
 }
 
 .auth-inner {
-  width: 1250px;
+  width: 462px;
   margin: auto;
-  padding: 20px 25px 25px 55px;
+  padding:30px 35px 30px 30px;
   border-radius: 15px;
   transition: all .3s;
 }
 
-.auth-innerer {
-  width: 1200px;
-  margin: auto;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 20px 25px 25px 10px;
-  border-radius: 15px;
-  transition: all .3s;
-}
 
 .auth-inners {
-  width: 590px;
+  width: 462px;
   margin: auto;
-  
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 20px 25px 25px 10px;
+  padding:30px 35px 30px 30px;
   border-radius: 15px;
   transition: all .3s;
 }
 
-.auth-innersr {
-  width: 590px;
-  margin: auto;
-  
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 20px 25px 25px px;
-  border-radius: 10px;
-  transition: all .3s;
-}
 
 .auth-wrapper .form-control:focus {
   border-color: #167bff;
