--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,94 @@
+
+:root {
+  --input-padding-x: 1.5rem;
+  --input-padding-y: 0.75rem;
+}
+
+.login,
+.image {
+  min-height: 100vh;
+}
+
+.bg-image {
+  background-image: url('image.png');
+  background-size: cover;
+  background-position: center;
+}
+
+
+.login-heading {
+  font-weight: 500;
+    color: #8a8484;
+}
+
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+  border-radius: 2rem;
+}
+
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-label-group>input,
+.form-label-group>label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+  height: auto;
+  border-radius: 2rem;
+}
+
+.form-label-group>label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #8a9095;
+  cursor: text;
+  /* Match the input under the label */
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
+  font-size: 12px;
+}
+
+.form-label-group input::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input:-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::placeholder {
+  color: transparent;
+}
+
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-label-group input:not(:placeholder-shown)~label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
 .App{
   font-size: 14px;
   padding-top: 60px;
@@ -7,20 +98,20 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 
 }
 .form-container{
-  background: #fff;
+ 
   border-radius: 20px;
   padding:30px 35px 30px 30px;
   max-width: 1250px;
   margin: 0 auto;
-  box-shadow: 0 15px 16px .17px rgba(0, 0, 0, 05);
+ 
 }
 .form-containers{
-  background: #fff;
+ 
   border-radius: 20px;
   padding: 20px 60px;
   max-width: 1250px;
   margin: 0 auto;
-  box-shadow: 0 15px 16px .17px rgba(0, 0, 0, 05);
+
 }
 .container{
   max-width: 1217px;
